Fix Java errors: rename file to match class name and update deprecated URL constructor